# replayGraphMSFS

./: CHANGELOG.md  CMakeLists.txt  README.md  index.html  test.html
src/Model/include/Model/: AircraftType.h  AttitudeData.h  SimVar.h
src/Model/src/: AircraftType.cpp  Attitude.cpp
src/Persistence/include/Persistence/: LocationSelector.h
src/Persistence/src/Dao/SQLite/: SQLiteAircraftTypeDao.cpp  SQLiteAttitudeDao.cpp
src/Persistence/src/Dao/SQLite/migr/: LogbookMigration.sql
src/PluginManager/src/Connect/: AbstractSkyConnect.cpp
src/Plugins/Connect/MSFSSimConnectPlugin/src/: MSFSSimConnectPlugin.cpp  SimConnectAi.cpp  SimConnectAi.h
src/Plugins/Connect/MSFSSimConnectPlugin/src/SimVar/: SimConnectAircraftInfo.cpp  SimConnectAircraftInfo.h
src/Plugins/Module/: CMakeLists.txt
src/Plugins/Module/Formation/src/: FormationWidget.cpp  FormationWidget.h
src/Plugins/Module/Location/src/: LocationSettings.cpp  LocationSettings.h  LocationWidget.cpp  LocationWidget.h
src/Plugins/Module/Server/: CMakeLists.txt
src/Plugins/Module/Server/src/: ServerPlugin.cpp  ServerPlugin.h  ServerPlugin.json  ServerSettings.cpp  ServerSettings.h  ServerWidget.cpp  ServerWidget.h  ServerWidget.ui  WebSocketServer.cpp  WebSocketServer.h
web/: draw.js  drawHelper.js  glass.html  graph.js  index.html  map.html  websocket.js
web/css/: styles.css
web/js/: flightPath.js  graphs.js  websocket.js
web2/: draw.js  flightPath.js  glass.html  graph.js  socket.js  state.js  stateHandler.js  table.js  test.html  uibuttons.js  websocket.js
(+5 files in other folders)
